[package]
edition = "2021"
license = "GPLv3"
name = "pallet-evm-contract-helpers"
version = "0.3.0"

[dependencies]
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Substrate
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

# Unique
evm-coder = { default-features = false, git = "https://github.com/UniqueNetwork/evm-coder", branch = "master" }
pallet-evm = { default-features = false, git = "https://github.com/uniquenetwork/frontier", branch = "unique-polkadot-v0.9.36" }
up-sponsorship = { version = "0.1.0", default-features = false, git = "https://github.com/uniquenetwork/pallet-sponsoring", branch = "polkadot-v0.9.36" }

# Locals
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = "3.1.2" }
pallet-common = { default-features = false, path = "../../pallets/common" }
pallet-evm-coder-substrate = { default-features = false, path = "../../pallets/evm-coder-substrate" }
pallet-evm-transaction-payment = { default-features = false, path = "../../pallets/evm-transaction-payment" }
up-data-structs = { default-features = false, path = "../../primitives/data-structs", features = ['serde1'] }

[features]
default = ["std"]
std = [
	"evm-coder/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-common/std",
	"pallet-evm-coder-substrate/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-std/std",
	"up-sponsorship/std",
]
stubgen = ["evm-coder/stubgen", "pallet-common/stubgen"]
try-runtime = ["frame-support/try-runtime"]
