[package]
edition = "2021"
license = "GPLv3"
name = "pallet-evm-migration"
version = "0.1.1"

[dependencies]
ethereum = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-evm = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["runtime-benchmarks", "std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
