[package]
edition = "2021"
license = "GPLv3"
name = "pallet-evm-transaction-payment"
version = "0.1.1"

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = "3.1.2" }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

fp-evm = { default-features = false, git = "https://github.com/uniquenetwork/frontier", branch = "unique-polkadot-v0.9.36" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-evm = { default-features = false, git = "https://github.com/uniquenetwork/frontier", branch = "unique-polkadot-v0.9.36" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
up-sponsorship = { version = "0.1.0", default-features = false, git = "https://github.com/uniquenetwork/pallet-sponsoring", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"up-sponsorship/std",
]
try-runtime = ["frame-support/try-runtime"]
