[package]
edition = "2021"
license = "GPLv3"
name = "pallet-evm-transaction-payment"
version = "0.1.1"

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = "3.1.2" }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

fp-evm = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v0.9.37" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-evm = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v0.9.37" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
up-sponsorship = { default-features = false, git = "https://github.com/uniquenetwork/pallet-sponsoring", branch = "polkadot-v0.9.37" }

[features]
default = ["std"]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"up-sponsorship/std",
]
try-runtime = ["frame-support/try-runtime"]
