[package]
edition = "2021"
license = "GPLv3"
name = "pallet-foreign-assets"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
log = { version = "0.4.16", default-features = false }
orml-tokens.workspace = true
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-common = { default-features = false, path = "../common" }
pallet-fungible = { default-features = false, path = "../fungible" }
serde = { version = "1.0.136", optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
up-data-structs = { default-features = false, path = "../../primitives/data-structs" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = ['frame-benchmarking', 'pallet-common/runtime-benchmarks']
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"orml-tokens/std",
	"pallet-balances/std",
	"pallet-common/std",
	"pallet-fungible/std",
	"scale-info/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
	"up-data-structs/std",
]
try-runtime = ["frame-support/try-runtime"]
