[package]
edition = "2021"
license = "GPLv3"
name = "pallet-foreign-assets"
version = "0.1.0"

[dependencies]
# Note: `package = "parity-scale-codec"` must be supplied since the `Encode` macro searches for it.
codec = { workspace = true, package = "parity-scale-codec" }

scale-info = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
orml-tokens = { workspace = true }
pallet-balances = { features = ["insecure_zero_ed"], workspace = true }
pallet-common = { workspace = true }
pallet-fungible = { workspace = true }
serde = { workspace = true, optional = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
up-data-structs = { workspace = true }
xcm = { workspace = true }
xcm-executor = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ['frame-benchmarking', 'pallet-common/runtime-benchmarks']
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"orml-tokens/std",
	"pallet-balances/std",
	"pallet-common/std",
	"pallet-fungible/std",
	"scale-info/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
	"up-data-structs/std",
	"xcm-executor/std"
]
try-runtime = ["frame-support/try-runtime"]
