[package]
edition = "2021"
license = "GPLv3"
name = "pallet-foreign-assets"
version = "0.1.0"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
pallet-balances = { features = ["insecure_zero_ed"], workspace = true }
pallet-balances-adapter = { workspace = true }
pallet-common = { workspace = true }
pallet-fungible = { workspace = true }
serde = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
staging-xcm = { workspace = true }
staging-xcm-executor = { workspace = true }
up-data-structs = { workspace = true }
derivative = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ['frame-benchmarking', 'pallet-common/runtime-benchmarks']
std = [
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances/std",
	"pallet-common/std",
	"pallet-fungible/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"staging-xcm-executor/std",
	"up-data-structs/std",
]
try-runtime = ["frame-support/try-runtime"]
