[package]
name = "pallet-foreing-assets"
version = "0.1.0"
license = "GPLv3"
edition = "2021"

[dependencies]
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.136", optional = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false  }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
#primitives = { package = "acala-primitives", path = "../../primitives", default-features = false }
up-data-structs = { default-features = false, path = '../../primitives/data-structs' }
pallet-common = { default-features = false, path = '../common' }
pallet-fungible = { default-features = false, path = '../fungible' }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", default-features = false }

#module-support = { path = "../support", default-features = false }

[dev-dependencies]
serde_json = "1.0.68"
hex = { version = "0.4" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

#module-evm = { path = "../evm" }
#module-evm-bridge = { path = "../evm-bridge" }
#orml-utilities = { path = "../../orml/utilities" }

[features]
default = ["std"]
std = [
	"serde",
	"log/std",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"up-data-structs/std",
	"pallet-common/std",
	"pallet-fungible/std",
	# "primitives/std",
	# "xcm/std",
	# "xcm-builder/std",
	# "xcm-executor/std",
	# "module-support/std",
]
try-runtime = ["frame-support/try-runtime"]
