[package]
name = "pallet-foreing-assets"
version = "0.1.0"
license = "GPLv3"
edition = "2021"

[dependencies]
log = { version = "0.4.16", default-features = false }
serde = { version = "1.0.136", optional = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false  }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
up-data-structs = { default-features = false, path = '../../primitives/data-structs' }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-common = { default-features = false, path = '../common' }
pallet-fungible = { default-features = false, path = '../fungible' }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false }
#orml-tokens = { git = 'https://github.com/UniqueNetwork/open-runtime-module-library', branch = 'unique-polkadot-v0.9.24', version = "0.4.1-dev", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.27", version = "0.4.1-dev", default-features = false }
#git = "https://github.com/open-web3-stack/open-runtime-module-library"
#branch = "polkadot-v0.9.27"

[dev-dependencies]
serde_json = "1.0.68"
hex = { version = "0.4" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

[features]
default = ["std"]
std = [
	"serde",
	"log/std",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"up-data-structs/std",
	"pallet-common/std",
	"pallet-balances/std",
	"pallet-fungible/std",
	"orml-tokens/std"
]
try-runtime = ["frame-support/try-runtime"]
