[package]
edition = "2021"
license = "GPLv3"
name = "pallet-fungible"
version = "0.1.11"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

evm-coder = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-common = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-coder-substrate = { workspace = true }
pallet-structure = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
up-data-structs = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ['frame-benchmarking', 'pallet-common/runtime-benchmarks']
std = [
	"evm-coder/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-common/std",
	"pallet-evm-coder-substrate/std",
	"pallet-evm/std",
	"pallet-structure/std",
	"sp-runtime/std",
	"sp-std/std",
	"up-data-structs/std",
	'frame-benchmarking/std',
]
stubgen = ["evm-coder/stubgen", "pallet-common/stubgen"]
try-runtime = ["frame-support/try-runtime"]
