################################################################################
# Package

[package]
authors = ['Unique Network <support@uniquenetwork.io>']
description = 'Unique App Governance Origins Pallet'
edition = '2021'
homepage = 'https://unique.network'
license = 'GPLv3'
name = 'pallet-gov-origins'
repository = 'https://github.com/UniqueNetwork/unique-chain'
version = '0.2.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
std = ['frame-support/std', 'frame-system/std', 'parity-scale-codec/std']
try-runtime = ["frame-support/try-runtime"]

[dependencies]
################################################################################
# Substrate Dependencies

parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
