[package]
authors = ["Parity Technologies <admin@parity.io>", "Unique Network <support@uniquenetwork.io>"]
description = "FRAME identity management pallet"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-identity"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Note: `package = "parity-scale-codec"` must be supplied since the `Encode` macro searches for it.
codec = { workspace = true, package = "parity-scale-codec", features = ["max-encoded-len"] }

enumflags2 = "0.7.4"
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
pallet-balances = { features = ["insecure_zero_ed"], workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
