################################################################################
# Package

[package]
authors = ['Unique Network <support@uniquenetwork.io>']
description = 'Unique Inflation Pallet'
edition = '2021'
homepage = 'https://unique.network'
license = 'GPLv3'
name = 'pallet-inflation'
repository = 'https://github.com/UniqueNetwork/unique-chain'
version = "0.1.1"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
fast-inflation = []
runtime-benchmarks = ['frame-benchmarking']
std = [
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-balances/std',
	'parity-scale-codec/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { features = ["insecure_zero_ed"], workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
up-common = { workspace = true }