[package]
authors = ["Unique Network <support@uniquenetwork.io>"]
description = "Unique Maintenance pallet"
edition = "2021"
homepage = "https://unique.network"
license = "GPLv3"
name = "pallet-maintenance"
readme = "README.md"
repository = "https://github.com/UniqueNetwork/unique-chain"
version = "0.1.0"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking", "frame-support/runtime-benchmarks", "frame-system/runtime-benchmarks"]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
