[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'Unqiue pallet nft specific transaction payment'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'pallet-nft-charge-transaction'
repository = 'https://github.com/usetech-llc/nft_private/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
serde = { version = "1.0.119", default-features = false }
frame-support = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.7' }
frame-system = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.7' }
pallet-balances = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.7' }
pallet-transaction-payment = { default-features = false, version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.7' }
sp-std = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.7' }
frame-benchmarking = { default-features = false, version = "3.0.0", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.7' }
sp-core = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.7' }
sp-io = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.7' }
sp-runtime = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.7' }

pallet-nft-transaction-payment = { default-features = false, path="../nft-transaction-payment" }

[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-transaction-payment/std',
    'pallet-nft-transaction-payment/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-benchmarking/std',
]
runtime-benchmarks = ["frame-benchmarking"]
